test/end-to-end/parse-errors/interpolated-string-literal-bad-position.crow
main void()
	info log "{x "y"}"
